fix: back ground image covering whole screen

--- a/apps/academy/src/styles.css
+++ b/apps/academy/src/styles.css
@@ -1,10 +1,25 @@
 @import "ui/styles.css";
 
 /* Apply the background to the entire page */
+
+html {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  overflow-x: hidden; /* Prevent horizontal scroll */
+}
+
 body {
   margin: 0; /* Remove default margin */
-  height: 100%;
+  padding: 0;
+  min-height: 100vh;
+  width: 100%;
+  background-image: url("/bg_home.png");
+  background-size: cover; /* Ensure the image covers the entire page */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Prevent the image from repeating */
   position: relative; /* Ensure child elements are positioned relative to body */
+  overflow-x: hidden;
 }
 
 .text-bttf {
